Fix form de contacto version mobile

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -106,7 +106,7 @@ label {
 }
 
 input[type="textForm"] {
-  width: 350px;
+  width: 100%;
   padding: 12px 15px;
   border: 1px solid rgb(203, 203, 203);
   border-radius: 5px;
